Source/WebKit/chromium: [Chromium] Ignore punctuation in spellcheck https://bugs.webkit.org/show_bug.cgi?id=108511

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-02-01
Reviewed by Tony Chang.

* src/ContextMenuClientImpl.cpp:
(WebKit::IsWhiteSpaceOrPunctuation): Added utility function to detect whitespace or punctuation.
(WebKit::selectMisspellingAsync): Ignore punctuation when selecting the misspelling.

LayoutTests: [Chromium] Expect spellcheck to ignore punctuation
https://bugs.webkit.org/show_bug.cgi?id=108511

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-02-01
Reviewed by Tony Chang.

* platform/chromium/TestExpectations: Expect spellcheck to ignore punctuation.

git-svn-id: svn://svn.chromium.org/blink/trunk@141650 bbb929c8-8fbe-4397-9dbb-9b2b20218538