third_party/WebKit/Source/WebKit/chromium/src/ContextMenuClientImpl.cpp
@@ -145,6 +145,11 @@ static String selectMisspelledWord(const ContextMenu* defaultMenu, Frame* select
     return misspelledWord;
 }
 
+static bool IsWhiteSpaceOrPunctuation(UChar c)
+{
+    return isSpaceOrNewline(c) || WTF::Unicode::isPunct(c);
+}
+
 static String selectMisspellingAsync(Frame* selectedFrame, Vector<DocumentMarker*>& markers)
 {
     VisibleSelection selection = selectedFrame->selection()->selection();
@@ -167,7 +172,7 @@ static String selectMisspellingAsync(Frame* selectedFrame, Vector<DocumentMarker
         selectionRange = selection.toNormalizedRange();
     }
 
-    if (markerRange->text().stripWhiteSpace() != selectionRange->text().stripWhiteSpace())
+    if (markerRange->text().stripWhiteSpace(&IsWhiteSpaceOrPunctuation) != selectionRange->text().stripWhiteSpace(&IsWhiteSpaceOrPunctuation))
         return String();
 
     return markerRange->text();
